<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/about_card_display" >
        <CheckBoxPreference
            android:key="filter_collectable"
            android:summary="@string/filter_summary"
            android:title="@string/filter_collectable" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about" >
        <Preference
            android:key="developer_info"
            android:summary="@string/developer_name"
            android:title="@string/developer" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://plus.google.com/+PurpleKFung/" />
        </Preference>
        <Preference 
            android:key="feedback_email"
            android:title="@string/feedback"
            >
        </Preference>
        <Preference 
            android:key="version"
            android:title="@string/version"/>
    </PreferenceCategory>

</PreferenceScreen>