<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ab_solid"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/card_img"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/note_shadow"
                android:orientation="vertical" >

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/note"
                    android:paddingBottom="10dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="10dp"
                    android:shrinkColumns="1"
                    android:stretchColumns="1" >

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            style="@style/detail_text_style"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_gravity="center"
                            android:text="@string/_class" />

                        <TextView
                            android:id="@+id/detail_class_text"
                            style="@style/detail_text_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_gravity="center"
                            android:text="萨满" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            style="@style/detail_text_style"
                            android:text="@string/type" />

                        <TextView
                            android:id="@+id/detail_type_text"
                            style="@style/detail_text_style"
                            android:text="TextView" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            style="@style/detail_text_style"
                            android:text="@string/rarity" />

                        <TextView
                            android:id="@+id/detail_rarity_text"
                            style="@style/detail_text_style"
                            android:text="TextView" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            style="@style/detail_text_style"
                            android:layout_gravity="center"
                            android:text="@string/flavor" />

                        <TextView
                            android:id="@+id/detail_flavor_text"
                            style="@style/detail_text_style"
                            android:lineSpacingMultiplier="1.2"
                            android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaa" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>